cmake_minimum_required(VERSION 2.8.12)

project( examples )

find_package( OpenCV REQUIRED )
find_package( OpenGL )

if(OPENGL_FOUND)
  include_directories( ${OpenCV_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} )
else()
  include_directories( ${OpenCV_INCLUDE_DIRS} )
endif()

#########################
# FOR LEARNING OPENCV 3 #
#########################
macro(add_example name)
    add_executable( ${name} ${name}.cpp )
    target_link_libraries( ${name} ${OpenCV_LIBS} )
endmacro(add_example name)

if(OPENGL_FOUND)
    # how to execute: LIBGL_ALWAYS_SOFTWARE=1 ./example_09-04 ../fruits.jpg
    add_executable( example_09-04 example_09-04.cpp )
    target_link_libraries( example_09-04 ${OpenCV_LIBS} ${OPENGL_LIBRARIES} )
endif()

add_example(example_02-01)
add_example(example_02-02)
add_example(example_02-03)
add_example(example_02-04)
add_example(example_02-05)
add_example(example_02-06)
add_example(example_02-07)
add_example(example_02-08)
add_example(example_02-09)
add_example(example_02-10)
add_example(example_02-11)
add_example(example_04-01)
add_example(example_04-02)
add_example(example_04-03)
add_example(example_04-04)
add_example(example_05-01)
add_example(example_07-01)
add_example(example_08-01)
add_example(example_08-02)
add_example(example_08-03)
add_example(example_09-01)
add_example(example_09-02)
add_example(example_09-03)
# Can only build if you have Qt installed add_executable( example_09-05 example_09-05.cpp )
# Need Qt target_link_libraries( example_09-05 ${OpenCV_LIBS} )
add_example(example_09-05_Qt_New_Functions)
add_example(example_10-01)
add_example(example_10-02)
add_example(example_10-03)
add_example(example_11-01)
add_example(example_11-02)
add_example(example_11-03)
add_example(example_12-01)
add_example(example_12-02)
add_example(example_12-03)
add_example(example_12-04)
add_example(example_13-01)
add_example(example_13-02)
add_example(example_13-03)
add_example(example_14-01)
add_example(example_14-02)
add_example(example_14-03)
add_example(example_14-04)
add_example(example_15-01)
add_example(example_15-02)
add_example(example_15-03)
add_example(example_15-04)
add_example(example_15-05)
add_example(example_15-BackgroundSubtractor)
add_example(example_16-01)
add_example(example_16-02)
add_example(example_17-01)
add_example(example_17-02)
add_example(example_18-01)
add_example(example_18-01_from_disk)
add_example(example_19-01)
add_example(example_19-02)
add_example(example_19-03)
add_example(example_19-04)
add_example(example_20-01)
add_example(example_20-02)
add_example(example_21-01)
add_example(example_22-01)

# NOW COMPILE SOME ANSWERS TO EXERCISES:
add_example(Exercises_5)
add_example(Exercises_7)
add_example(Exercises_8_1)
add_example(Exercises_9_1-2-10-11-12-15-16)
add_example(Exercises_9_4)
add_example(Exercises_9_5)
add_example(Exercises_11-1-2-5-6-7)
add_example(Exercises_13_1-2-11)
add_example(Exercises_13_9)